--- a/SMBSync/build.gradle
+++ b/SMBSync/build.gradle
@@ -30,8 +30,8 @@ android {
                         def date = new java.text.SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date())
                         def mod_name = variant.getPackageApplication().projectBaseName
                         def fileExtension= outputFileName.toString().substring(outputFileName.toString().lastIndexOf(".")+1)
-                        def newName = "${mod_name}_${versionName}_${versionNumber}_${date}.${fileExtension}"
-//                        def newName = "${mod_name}_${versionName}_${versionNumber}.${fileExtension}"
+//                        def newName = "${mod_name}_${versionName}_${versionNumber}_${date}.${fileExtension}"
+                        def newName = "${mod_name}_${versionName}_${versionNumber}.${fileExtension}"
                         outputFileName = newName
                     }
                 }
