--- a/SMBSync/build.gradle
+++ b/SMBSync/build.gradle
@@ -18,6 +18,27 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+
+            applicationVariants.all { variant ->
+                if (variant.buildType.name.equals("debug")) {
+                    variant.outputs.all {
+                        def versionName = variant.versionName
+                        def versionNumber = variant.versionCode.toString()
+                        def date = new java.text.SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date())
+                        def mod_name = variant.getPackageApplication().projectBaseName
+                        def fileExtension= outputFileName.toString().substring(outputFileName.toString().lastIndexOf(".")+1)
+//                        def newName = "${mod_name}_${versionName}_${versionNumber}_${date}.${fileExtension}"
+                        def newName = "${mod_name}_debug.${fileExtension}"
+                        outputFileName = "../../../../../release/"+newName
+                    }
+                }
+            }
+
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
@@ -31,7 +52,7 @@ android {
                         def mod_name = variant.getPackageApplication().projectBaseName
                         def fileExtension= outputFileName.toString().substring(outputFileName.toString().lastIndexOf(".")+1)
 //                        def newName = "${mod_name}_${versionName}_${versionNumber}_${date}.${fileExtension}"
-                        def newName = "${mod_name}_${versionName}_${versionNumber}.${fileExtension}"
+                        def newName = "${mod_name}_${versionName}_${versionNumber}_release.${fileExtension}"
                         outputFileName = newName
                     }
                 }
@@ -43,6 +64,7 @@ android {
 dependencies {
 //    implementation project(':Utilities')
 //    implementation(name:'Utilities-1.0.5', ext:'aar')
-    implementation files('libs/Utilities-1.0.5.aar')
+    implementation files('libs/Utilities-1.0.7.aar')
+    implementation files('libs/jcifs-1.3.17_patch.jar')
     implementation 'com.android.support:appcompat-v7:22.2.1'
 }
