--- a/SMBSync/src/main/AndroidManifest.xml
+++ b/SMBSync/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sentaroh.android.SMBSync">
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11"/>
+    <!--<uses-sdk android:targetSdkVersion="11"/>-->
     
 	<uses-permission android:name="android.permission.INTERNET"/>
    	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
