--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.2.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
         flatDir {
             dirs 'libs'
         }
